Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <h1>
 <a id="liquid" class="anchor" href="#liquid" aria-hidden="true"><span class="octicon octicon-link"></span></a>Liquid</h1>
 
-<p>Liquid is a simple, small board game. You can <a href="build/liquid.html">play online</a>.</p>
+<p>Liquid is a simple, small board game. You can <a href="build/liquid.html">play online</a> if you use a new version of Firefox, or a new version of Chrome/Chromium if you enable experimental Javascript features.
+Otherwise, you can try out our <a href="build/legacy.html">legacy edition</a>.</p>
       </section>
     </div>
 
@@ -46,7 +47,17 @@
       </footer>
     </div>
 
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-68884109-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
 
   </body>
 </html>
