Better about, better instructions.

--- a/about.html
+++ b/about.html
@@ -39,7 +39,8 @@
 
     <div class="container">
       <p>
-        Liquid is a strategy game. Inspired by games like
+        Liquid is a strategy game.
+        <a href="#inspired">Inspired</a> by games like
         Reversi, where vast parts of the board can flip
         from one player's to another's control, Liquid
         features common reversals of large portions of the
@@ -54,6 +55,19 @@
         may run faster and lends to better debugging, but
         only works on recent versions of Firefox.
       </p>
+
+      <p id="inspired">
+        Please see the following games, by which Liquid was
+        inspired:
+      </p>
+
+      <ul>
+        <li>
+          <a href="https://en.wikipedia.org/wiki/Reversi">Othello / Reversi</a>,
+          a classical board game</li>
+        <li><a href="http://www.bammi.com/">Bammi</a>
+          &mdash; The Exploding Pie Game</li>
+      </ul>
     </div>
 
 
